name:                hblock
version:             0.1.0.0
synopsis:            Block puzzle in Haskell
description:         Block puzzle in Haskell
homepage:            https://seroron.com
license:             MIT
license-file:        LICENSE
author:              Kenichi HIROSE
maintainer:          seroron@outlook.com
copyright:           2018 Kenichi HIROSE
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HBlock, Fps, Util, Graphics
  build-depends:       base
                     , random, GLUT, SDL,
                       base, mtl, multiset, lens, lists
  default-language:    Haskell2010

executable hblock
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, hblock
  default-language:    Haskell2010

test-suite hblock-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, hblock, hspec,
                       directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/seroron/hblock
